@@ -1,23 +1,20 @@
 # Expect script for ld-version tests
-#   Copyright 1997, 1998, 1999, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008,
-#   2009, 2010, 2011, 2012 Free Software Foundation, Inc.
+#   Copyright 1997, 1998, 1999, 2001, 2002, 2003, 2004, 2005
+#   Free Software Foundation, Inc.
 #
-# This file is part of the GNU Binutils.
-#
-# This program is free software; you can redistribute it and/or modify
+# This file is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 3 of the License, or
+# the Free Software Foundation; either version 2 of the License, or
 # (at your option) any later version.
-#
+# 
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-#
+# 
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston,
-# MA 02110-1301, USA.
+# Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA 02110-1301, USA.
 #
 # Written by Eric Youngdale (eric@andante.jic.com)
 
@@ -29,37 +26,34 @@ if ![isnative] then {return}
 # This test can only be run on a couple of ELF platforms.
 # Square bracket expressions seem to confuse istarget.
 # This is similar to the test that is used in ld-shared, BTW.
-if { ![istarget hppa*64*-*-hpux*]
-     && ![istarget hppa*-*-linux*]
-     && ![istarget i?86-*-sysv4*]
-     && ![istarget i?86-*-unixware]
-     && ![istarget i?86-*-elf*]
-     && ![istarget i?86-*-linux*]
-     && ![istarget i?86-*-gnu*]
-     && ![istarget i?86-*-nacl*]
-     && ![istarget ia64-*-elf*]
-     && ![istarget ia64-*-linux*]
-     && ![istarget m68k-*-linux*]
-     && ![istarget mips*-*-irix5*]
-     && ![istarget powerpc*-*-elf*]
-     && ![istarget powerpc*-*-linux*]
-     && ![istarget powerpc*-*-sysv4*]
-     && ![istarget sparc*-*-elf]
-     && ![istarget sparc*-*-solaris2*]
-     && ![istarget sparc*-*-linux*]
-     && ![istarget aarch64*-*-linux*]
-     && ![istarget arm*-*-linux*]
-     && ![istarget mips*-*-linux*]
-     && ![istarget alpha*-*-linux*]
-     && ![istarget s390*-*-linux*]
-     && ![istarget sh\[34\]*-*-linux*]
-     && ![istarget x86_64-*-linux*]
-     && ![istarget x86_64-*-nacl*] } {
+if { ![istarget hppa*64*-*-hpux*] \
+     && ![istarget hppa*-*-linux*] \
+     && ![istarget i?86-*-sysv4*] \
+     && ![istarget i?86-*-unixware] \
+     && ![istarget i?86-*-elf*] \
+     && ![istarget i?86-*-linux*] \
+     && ![istarget ia64-*-elf*] \
+     && ![istarget ia64-*-linux*] \
+     && ![istarget m68k-*-linux*] \
+     && ![istarget mips*-*-irix5*] \
+     && ![istarget powerpc-*-elf*] \
+     && ![istarget powerpc-*-linux*] \
+     && ![istarget powerpc-*-sysv4*] \
+     && ![istarget sparc*-*-elf] \
+     && ![istarget sparc*-*-solaris2*] \
+     && ![istarget sparc*-*-linux*] \
+     && ![istarget arm*-*-linux*] \
+     && ![istarget mips*-*-linux*] \
+     && ![istarget alpha*-*-linux*] \
+     && ![istarget s390*-*-linux*] \
+     && ![istarget sh\[34\]*-*-linux*] \
+     && ![istarget x86_64-*-linux*] } {
     return
 }
 
-if { [istarget *-*-linux*aout*]
-     || [istarget *-*-linux*oldld*] } {
+if { [istarget i?86-*-linux*aout*] \
+     || [istarget i?86-*-linux*oldld*] \
+     || [istarget m68k-*-linux*aout*] } {
     return
 }
 
@@ -75,9 +69,7 @@ set SOBJDUMP_FLAGS --syms
 set shared "--shared --no-undefined-version"
 set script --version-script
 
-# Old version of GCC for MIPS default to enabling -fpic
-# and get confused if it is used on the command line.
-if { [istarget mips*-*-*] && ! [at_least_gcc_version 4 3] } then {
+if [istarget mips*-*-*] {
     set picflag ""
 } else {
     # Unfortunately, the gcc argument is -fpic and the cc argument is
@@ -88,9 +80,9 @@ if { [istarget mips*-*-*] && ! [at_least_gcc_version 4 3] } then {
     catch "exec $CC $picflag" exec_output
     send_log "$exec_output\n"
     verbose "--" "$exec_output"
-    if { [string match "*illegal option*" $exec_output]
-	 || [string match "*option ignored*" $exec_output]
-	 || [string match "*unrecognized option*" $exec_output]
+    if { [string match "*illegal option*" $exec_output] \
+	 || [string match "*option ignored*" $exec_output] \
+	 || [string match "*unrecognized option*" $exec_output] \
 	 || [string match "*passed to ld*" $exec_output] } {
 	if [istarget *-*-sunos4*] {
 	    set picflag "-pic"
@@ -102,7 +94,6 @@ if { [istarget mips*-*-*] && ! [at_least_gcc_version 4 3] } then {
 
 case $target_triplet in {
     { ia64-*-* } { set as_options "-x" }
-    { sparc-*-* } { set as_options "-Av9a" }
     default { set as_options "" }
 }
 
@@ -122,12 +113,12 @@ proc test_ar { test lib object expect } {
 	unresolved "$test"
 	return
     }
-
+    
     verbose -log "$nm --print-armap $tmpdir/$lib | grep \" in \" | egrep \"VERS\\|bar\\|foo\" | sort > $tmpdir/nm.out"
 
     catch "exec $nm --print-armap $tmpdir/$lib | grep \\\ in\\\  | egrep VERS\\\|bar\\\|foo | sort > $tmpdir/nm.out" exec_output
     if [string match "" $exec_output] then {
-	catch "exec sort $srcdir/$subdir/$expect | $diff $tmpdir/nm.out -" exec_output
+	catch "exec $diff $tmpdir/nm.out $srcdir/$subdir/$expect" exec_output
 	set exec_output [prune_warnings $exec_output]
 	if [string match "" $exec_output] then {
 	    pass $test
@@ -264,7 +255,7 @@ proc objdump_symstuff { objdump object expectfile } {
 	    perror "$expectfile doesn't exist"
 	    return 0
 	}
-
+	
 	if [file exists $tmpdir/objdump.out] then {
 	    set file_b [open $tmpdir/objdump.out r]
 	} else {
@@ -294,11 +285,11 @@ proc objdump_symstuff { objdump object expectfile } {
 	    }
 	}
 	close $file_b
-
+	
 	for { set i 0 } { $i < [llength $list_a] } { incr i } {
 	    set line_a [lindex $list_a $i]
 	    set line_b [lindex $list_b $i]
-
+	    
 
 	    verbose "\t$expectfile: $i: $line_a" 3
 	    verbose "\t/tmp/objdump.out: $i: $line_b" 3
@@ -307,20 +298,20 @@ proc objdump_symstuff { objdump object expectfile } {
 	    } else {
 		verbose -log "\t$expectfile: $i: $line_a"
 		verbose -log "\t$tmpdir/objdump.out: $i: $line_b"
-
+		
 		return 0
 	    }
 	}
-
+	
 	if { [llength $list_a] != [llength $list_b] } {
 	    verbose -log "Line count"
 	    return 0
 	}
-
+	
 	if $differences<1 then {
 	    return 1
 	}
-
+	
 	return 0
     } else {
 	verbose -log "$exec_output"
@@ -359,7 +350,7 @@ proc objdump_dynsymstuff { objdump object expectfile } {
 	    warning "$expectfile doesn't exist"
 	    return 0
 	}
-
+	
 	if [file exists $tmpdir/objdump.out] then {
 	    set file_b [open $tmpdir/objdump.out r]
 	} else {
@@ -389,7 +380,7 @@ proc objdump_dynsymstuff { objdump object expectfile } {
 	    }
 	}
 	close $file_b
-
+	
 	# Support empty files.
 	if { ![info exists list_a] && ![info exists list_b] } then {
 	    return 1
@@ -397,12 +388,12 @@ proc objdump_dynsymstuff { objdump object expectfile } {
 
 	for { set i 0 } { $i < [llength $list_b] } { incr i } {
 	    set line_b [lindex $list_b $i]
-
+	    
 # The tests are rigged so that we should never export a symbol with the
 # word 'hide' in it.  Thus we just search for it, and bail if we find it.
 	    if [regexp "hide" $line_b] then {
 		verbose -log "\t$tmpdir/objdump.out: $i: $line_b"
-
+		
 		return 0
 	    }
 
@@ -422,20 +413,20 @@ proc objdump_dynsymstuff { objdump object expectfile } {
 
 	    if { $j >= [llength $list_a] } {
 		verbose -log "\t$tmpdir/objdump.out: $i: $line_b"
-
+		
 		return 0
 	    }
 	}
-
+	
 	if { [llength $list_a] != [llength $list_b] } {
 	    verbose -log "Line count"
 	    return 0
 	}
-
+	
 	if $differences<1 then {
 	    return 1
 	}
-
+	
 	return 0
     } else {
 	verbose -log "$exec_output"
@@ -469,33 +460,44 @@ proc objdump_versionstuff { objdump object expectfile } {
 
 	# It's OK if there are extra lines in the actual output; they
 	# may come from version information in libc.  We require that
-	# every line in EXPECTFILE appear in the output in any order.
+	# every line in EXPECTFILE appear in the output in order.
 
+	set f1 [open $tmpdir/objdump.out r]
 	set f2 [open $expectfile r]
 	while { [gets $f2 l2] != -1 } {
 	    if { ![regexp "^#.*$" $l2] } then {
-		set f1 [open $tmpdir/objdump.out r]
-		while { [gets $f1 l1] != -1 } {
-		    if { [string match $l2 $l1] } then {
-			break
-		    }
-		}
-		close $f1
-
-		if { ![string match $l2 $l1] } then {
-		    verbose -log "Did not find \"$l2\""
-		    set f1 [open $tmpdir/objdump.out r]
-		    while { [gets $f1 l1] != -1 } {
-			verbose -log $l1
-		    }
+		break
+	    }
+	} 
+	while { [gets $f1 l1] != -1 } {
+	    if { [string match $l2 $l1] } then {
+		if { [gets $f2 l2] == -1 } then {
 		    close $f1
 		    close $f2
-		    return 0
+		    return 1
 		}
 	    }
 	}
+
+	# We reached the end of the output without seeing the line we
+	# expected.  This is a test failure.
+
+	close $f1
 	close $f2
-	return 1
+
+	# Support empty expected file.
+	if [string match "" $l2] then {
+	    return 1
+	}
+
+	verbose -log "Did not find \"$l2\""
+	set f1 [open $tmpdir/objdump.out r]
+	while { [gets $f1 l1] != -1 } {
+	    verbose -log $l1
+	}
+
+	verbose -log "$exec_output"
+	return 0
     } else {
 	verbose -log "$exec_output"
 	return 0
@@ -567,7 +569,7 @@ proc build_binary { shared pic test source libname other mapfile verexp versymex
     }
 
     pass $test
-
+    
 }
 
 proc build_executable { test source libname other mapfile verexp versymexp symexp } {
@@ -681,12 +683,12 @@ proc test_strip_vers_lib { test srclib libname verexp versymexp } {
 	    fail "$test"
 	    return
 	}
-
+	
 	if {![objdump_dynsymstuff $objdump $tmpdir/$libname.so $srcdir/$subdir/$versymexp ]}     {
 	    fail "$test"
 	    return
 	}
-
+	
     } else {
 	verbose -log "$exec_output"
 	fail "$test"
@@ -773,9 +775,8 @@ proc build_exec { test source execname flags solibname verexp versymexp symexp }
     pass $test
 }
 
-if { [istarget x86_64-*-linux*] \
-     || ( [istarget mips*-*-linux*] && [at_least_gcc_version 4 3] ) } {
-    # x86_64 and newer MIPS toolchains do not like non-pic shared libraries
+if [istarget x86_64-*-linux*] {
+    # x86_64 doesn't like non-pic shared libraries
     set pic "yes"
 } else {
     set pic "no"
@@ -809,11 +810,7 @@ build_exec "vers3" vers3.c vers3 "" vers1.so vers3.ver vers3.dsym ""
 setup_xfail "mips*-*-*"
 build_exec "vers4" vers4.c vers4 "" "" "" "" vers4.sym
 
-build_exec "vers4a" vers4.c vers4a "-Wl,-export-dynamic" "" vers4a.ver vers4a.dsym vers4a.sym
-
-# Verify that --no-export-dynamic undoes the effect of --export-dynamic.
-setup_xfail "mips*-*-*"
-build_exec "vers4b" vers4.c vers4b "-Wl,-export-dynamic -Wl,--no-export-dynamic" "" "" "" vers4.sym
+build_exec "vers4a" vers4.c vers4a "-export-dynamic" "" vers4a.ver vers4a.dsym vers4a.sym
 
 
 #
@@ -854,7 +851,7 @@ build_vers_lib_pic "vers8" vers1.c vers8 vers8.map "" vers8.ver vers1.dsym vers1
 # This test tries to make sure that version references to versioned symbols
 # don't collide with default definitions with the same symbol.
 #
-build_exec "vers9" vers9.c vers9 "-Wl,-export-dynamic" "" vers9.ver vers9.dsym vers9.sym
+build_exec "vers9" vers9.c vers9 "-export-dynamic" "" vers9.ver vers9.dsym vers9.sym
 
 
 #
@@ -879,15 +876,15 @@ test_ar "ar with versioned solib" vers13.a vers1.so vers13.asym
 #
 # Strip a shared library, and make sure we didn't screw something up in there.
 #
-test_strip_vers_lib "vers14" vers1.so vers14 vers1.ver vers1.dsym
+test_strip_vers_lib "vers14" vers1.so vers14 vers1.ver vers1.dsym 
 
 
 #
-# Build another test with some versioned symbols.  Here we are going to
+# Build another test with some versioned symbols.  Here we are going to 
 # try and override something from the library, and we shouldn't get
 # any errors.
 #
-build_exec "vers15" vers15.c vers15 "-Wl,--no-as-needed" vers1.so vers15.ver vers15.dsym vers15.sym
+build_exec "vers15" vers15.c vers15 "" vers1.so vers15.ver vers15.dsym vers15.sym
 
 #
 # Test that when we override a versioned symbol from the library this
@@ -899,7 +896,7 @@ build_exec "vers16" vers16.c vers16 "" vers16a.so "" vers16.dsym ""
 # Test a weak versioned symbol.
 build_vers_lib_pic "vers17" vers17.c vers17 "" vers17.map vers17.ver vers17.dsym ""
 build_vers_lib_pic "vers18" vers18.c vers18 vers17.so vers18.map vers18.ver vers18.dsym vers18.sym
-build_exec "vers19" vers19.c vers19 "-Wl,-rpath,. -Wl,-rpath-link,." vers18.so vers19.ver vers19.dsym ""
+build_exec "vers19" vers19.c vers19 "-Wl,-rpath,." vers18.so vers19.ver vers19.dsym ""
 
 build_vers_lib_no_pic "vers20a" vers20.c vers20a "" vers20.map vers20a.ver vers20.dsym ""
 exec cp $tmpdir/vers20a.so $tmpdir/vers20b.so
@@ -915,7 +912,7 @@ build_vers_lib_pic "vers22" vers22.c vers22 "vers22a.so vers22b.so" "" vers22.ve
 
 # Test versioned definitions in different files.
 if [string match "yes" $pic] then {
-    xfail "vers23a"
+    xfail "vers23a" 
     xfail "vers23b"
     xfail "vers23c"
     xfail "vers23d"
@@ -1002,7 +999,3 @@ build_vers_lib_pic "vers30" vers30.c vers30 "" vers30.map vers30.ver vers30.dsym
 
 # Test #31 -- quoted strings in version sections.
 build_vers_lib_pic "vers31" vers31.c vers31 "" vers31.map vers31.ver vers31.dsym ""
-
-# Test #32 -- linker --defsym
-build_vers_lib_pic "vers32a" vers32a.c vers32a "" vers32.map vers32a.ver vers32a.dsym ""
-build_vers_lib_pic_flags "vers32b" vers32b.c vers32b "vers32a.so" vers32.map vers32b.ver vers32b.dsym "" "--defsym foo=0"
